Overflow and height property to fixed container fixes #83

--- a/front_end/css/less/module/navigation.less
+++ b/front_end/css/less/module/navigation.less
@@ -48,6 +48,8 @@
 #menu.fixed .regulation-nav {
     position: fixed;
     top: 59px; /* a magic number */
+    overflow-y: scroll;
+    height: 100%;
 }
 
 /*.no-js .panel {
